--- a/testfile.yml
+++ b/testfile.yml
@@ -47,140 +47,170 @@ Parameters:
     NoEcho: true
     Default: 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
 
-  BuckerName:
-    Description: S3 Bucket Name
-    Type: String
-    Default: ecs-deployment-devops-project
+  CodePipelineRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: 
+                - codepipeline.amazonaws.com
+                - codebuild.amazonaws.com
+            Action: 'sts:AssumeRole'
+      Policies:
+        - PolicyName: CodePipelinePolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Resource:
+                  - 'arn:aws:logs:us-east-1:433337163311:log-group:/aws/codebuild/demo'
+                  - 'arn:aws:logs:us-east-1:433337163311:log-group:/aws/codebuild/demo:*'
+                  - '*'
+                Action:
+                  - 'logs:CreateLogGroup'
+                  - 'logs:CreateLogStream'
+                  - 'logs:PutLogEvents'
+              - Effect: Allow
+                Resource:
+                  - 'arn:aws:s3:::ecs-deployment-devops-project*'
+                  - 'arn:aws:s3:::ecs-deployment-devops-project-*/*'
+                Action:
+                  - 's3:PutObject'
+                  - 's3:GetObject'
+                  - 's3:GetObjectVersion'
+                  - 's3:GetBucketAcl'
+                  - 's3:GetBucketLocation'
+                  - 's3:*'
+              - Effect: Allow
+                Action:
+                  - 'ecr:GetAuthorizationToken'
+                  - 'ecr:GetDownloadUrlForLayer'
+                  - 'ecr:BatchCheckLayerAvailability'
+                  - 'ecr:GetRepositoryPolicy'
+                  - 'ecr:DescribeRepositories'
+                  - 'ecr:ListImages'
+                  - 'ecr:DescribeImages'
+                  - 'ecr:BatchGetImage'
+                  - 'ecr:GetLifecyclePolicy'
+                  - 'ecr:GetLifecyclePolicyPreview'
+                  - 'ecr:GetRepositoryPolicyPreview'
+                  - 'ecr:PutLifecyclePolicy'
+                  - 'ecr:PutImageTagMutability'
+                  - 'ecr:PutImage'
+                  - 'ecr:PutImageScanningConfiguration'
+                  - 'ecr:StartImageScan'
+                  - 'ecr:BatchDeleteImage'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'codebuild:CreateReportGroup'
+                  - 'codebuild:CreateReport'
+                  - 'codebuild:UpdateReport'
+                  - 'codebuild:BatchPutTestCases'
+                  - 'codebuild:BatchPutCodeCoverages'
+                Resource:
+                  - 'arn:aws:codebuild:us-east-1:433337163311:report-group/demo-*'
+              - Effect: Allow
+                Action: 'codebuild:StartBuild'
+                Resource: 'arn:aws:codebuild:us-east-1::project/CodeBuildProject'
 
-Resources:
+  CodeBuildProject:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Name: CodeBuildProject
+      ServiceRole: !Ref CodePipelineRole
+      Source:
+        Type: GITHUB
+        Location: https://github.com/hammadkhaliq566/AWS-ECS-Project.git
+        BuildSpec: buildspec.yml
+      Artifacts:
+        Type: NO_ARTIFACTS
+      Environment:
+        Type: LINUX_CONTAINER
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
+        PrivilegedMode: true
 
- ---
-AWSTemplateFormatVersion: '2010-09-09'
-Description: The template used to create an ECS Service from the ECS Console.
-Parameters:
-  ECSClusterName:
-    Type: String
-    Default: demo
-  SecurityGroupName:
-    Type: CommaDelimitedList
-    Default: ECS-SG
-  SubnetIDs:
-    Type: CommaDelimitedList
-    Default: subnet-08e4323cf74cb322a,subnet-02465a0b825df1219
-  VpcID:
-    Type: String
-    Default: vpc-0945ecce97364ef42
-  LoadBalancerName:
-    Type: String
-    Default: ALB-ECS-Service
-Resources:
-  ECSService:
-    Type: AWS::ECS::Service
+  CodeDeployServiceRole:
+    Type: AWS::IAM::Role
     Properties:
-      Cluster: demo
-      TaskDefinition: arn:aws:ecs:us-east-1:433337163311:task-definition/TaskDefinatioECS-Service:2
-      LaunchType: FARGATE
-      ServiceName: ECS-Service
-      SchedulingStrategy: REPLICA
-      DesiredCount: 2
-      LoadBalancers:
-      - ContainerName: flaskapp
-        ContainerPort: 80
-        LoadBalancerName:
-          Ref: AWS::NoValue
-        TargetGroupArn:
-          Ref: TargetGroup
-      HealthCheckGracePeriodSeconds: '10'
-      NetworkConfiguration:
-        AwsvpcConfiguration:
-          AssignPublicIp: ENABLED
-          SecurityGroups:
-          - Ref: SecurityGroup
-          Subnets:
-            Ref: SubnetIDs
-      PlatformVersion: LATEST
-      DeploymentConfiguration:
-        MaximumPercent: 200
-        MinimumHealthyPercent: 100
-        DeploymentCircuitBreaker:
-          Enable: true
-          Rollback: true
-      DeploymentController:
-        Type: ECS
-      ServiceConnectConfiguration:
-        Enabled: false
-      Tags: []
-      EnableECSManagedTags: true
-    DependsOn:
-    - Listener
-    
-  SecurityGroup:
-    Type: AWS::EC2::SecurityGroup
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: codedeploy.amazonaws.com
+            Action: 'sts:AssumeRole'
+      Policies:
+        - PolicyName: CodeDeployServiceRolePolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 'ecs:DescribeServices'
+                  - 'ecs:UpdateService'
+                Resource: !Sub 'arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/ECSCluster/*'
+
+  GithubWebhook:
+    Type: AWS::CodePipeline::Webhook
     Properties:
-      GroupDescription: SecurityGroup for ECS
-      GroupName: ECS-SG
-      VpcId: vpc-0945ecce97364ef42
-      SecurityGroupIngress:
-      - FromPort: 80
-        ToPort: 80
-        IpProtocol: tcp
-        CidrIp: 0.0.0.0/0
-      - FromPort: 80
-        ToPort: 80
-        IpProtocol: tcp
-        CidrIpv6: "::/0"
-  LoadBalancer:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+      Authentication: GITHUB_HMAC
+      AuthenticationConfiguration:
+          SecretToken: !Ref GitHubOAuthToken
+      RegisterWithThirdParty: true
+      Filters:
+      - JsonPath: "$.ref"
+        MatchEquals: refs/heads/{Branch}
+      TargetPipeline: !Ref CodePipeline
+      TargetPipelineVersion: !GetAtt CodePipeline.Version
+      TargetAction: Source
+
+  CodePipeline:
+    Type: AWS::CodePipeline::Pipeline
     Properties:
-      Type: application
-      Name: ALB-ECS-Service
-      SecurityGroups:
-      - Ref: SecurityGroup
-      Subnets:
-        Ref: SubnetIDs
-  TargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      HealthCheckPath: "/"
-      Name: ECS-TG
-      Port: 80
-      Protocol: HTTP
-      TargetType: ip
-      HealthCheckProtocol: HTTP
-      VpcId:
-        Ref: VpcID
-  Listener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      DefaultActions:
-      - Type: forward
-        TargetGroupArn:
-          Ref: TargetGroup
-      LoadBalancerArn:
-        Ref: LoadBalancer
-      Port: 80
-      Protocol: HTTP
-Outputs:
-  ClusterName:
-    Description: The cluster used to create the service.
-    Value:
-      Ref: ECSClusterName
-  ECSService:
-    Description: The created service.
-    Value:
-      Ref: ECSService
-  LoadBalancer:
-    Description: The created load balancer.
-    Value:
-      Ref: LoadBalancer
-  Listener:
-    Description: The created listener.
-    Value:
-      Ref: Listener
-  TargetGroup:
-    Description: The created target group.
-    Value:
-      Ref: TargetGroup
+      Name: GluePipeline
+      ArtifactStore:
+        Type: S3
+        Location: !Sub ${BuckerName}
+      RestartExecutionOnUpdate: true
+      RoleArn: !GetAtt CodePipelineRole.Arn
+      Stages:
+      - Name: Source
+        Actions:
+        - Name: Source
+          InputArtifacts: []
+          ActionTypeId:
+            Category: Source
+            Owner: ThirdParty
+            Version: 1
+            Provider: GitHub
+          OutputArtifacts:
+          - Name: SourceCode
+          Configuration:
+            Owner: !Ref GitHubOwner
+            Repo: !Ref GitHubRepo
+            Branch: !Ref GitHubBranch
+            PollForSourceChanges: false
+            OAuthToken: !Ref GitHubOAuthToken
+          RunOrder: 1
+      - Name: Build
+        Actions:
+          - Name: BuildAction
+            ActionTypeId:
+              Category: Build
+              Owner: AWS
+              Version: '1'
+              Provider: CodeBuild
+            InputArtifacts:
+              - Name: SourceCode
+            Configuration:
+              ProjectName: !Ref CodeBuildProject
+            OutputArtifacts:
+              - Name: BuildOutput
 
 
 
@@ -232,3 +262,34 @@ Outputs:
 
 
       TaskDefinition: arn:aws:ecs:us-east-1:433337163311:task-definition/ECSTaskDefination:1
+
+
+
+  MySecret:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: MyPrivateRegistryCredentials
+      Description: Secret for Private Registry Authentication
+      SecretString: '{"username": "hammad", "password": "HammadKhaliq@0064"}'
+
+  ECSTaskExecutionRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: ECSTaskExecutionRole
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service: ecs-tasks.amazonaws.com
+              Action: 'sts:AssumeRole'
+        ManagedPolicyArns:
+          - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+        Policies:
+          - PolicyName: CodeDeployServiceRolePolicy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action: secretsmanager:GetSecretValue
+                  Resource: !GetAtt MySecret.Arn
